WebCore:

2008-06-05  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Eric.

        <https://bugs.webkit.org/show_bug.cgi?id=19403>
        ASSERT in InsertIntoTextNodeCommand::InsertIntoTextNodeCommand during RemoveFormat call

        * editing/RemoveFormatCommand.cpp:
        (WebCore::RemoveFormatCommand::doApply): If the selection was all
        formatting (like an empty list) the format-less text will be empty.
        Early return to avoid the ASSERT that fires if input(...) is called
        with an empty String.

LayoutTests:

2008-06-05  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Eric.

        <https://bugs.webkit.org/show_bug.cgi?id=19403>
        ASSERT in InsertIntoTextNodeCommand::InsertIntoTextNodeCommand during RemoveFormat call

        * editing/execCommand/19403-expected.txt: Added.
        * editing/execCommand/19403.html: Added.



Canonical link: https://commits.webkit.org/26850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34399 268f45cc-cd09-0410-ab3c-d52691b4dbfc